<resources>
    <string name="app_name">Logica</string>
    <string name="f">F</string>
    <string name="t">T</string>
    <string name="title">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_b">A ^ B</string>
    <string name="submit">Submit</string>
    <string name="case_1">T</string>
    <string name="case_2">F</string>
    <string name="case_3">F</string>
    <string name="case_4">F</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
</resources>
